tests/baselines/reference/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.errors.txt
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(3,20): error TS1005: ':' expected.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(4,7): error TS1005: ':' expected.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(5,10): error TS1005: '(' expected.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(6,10): error TS1005: '(' expected.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(7,5): error TS2304: Cannot find name 'this'.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(8,5): error TS2304: Cannot find name 'super'.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(9,5): error TS2304: Cannot find name 'var'.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(10,5): error TS2304: Cannot find name 'class'.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(11,5): error TS2304: Cannot find name 'typeof'.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(15,5): error TS2300: Duplicate identifier 'a'.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(15,6): error TS1005: ':' expected.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(16,5): error TS2300: Duplicate identifier 'a'.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(16,6): error TS1005: ':' expected.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(17,5): error TS2300: Duplicate identifier 'a'.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(17,6): error TS1005: ':' expected.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts(20,11): error TS2304: Cannot find name 'class'.


==== tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesErrorFromNotUsingIdentifier.ts (16 errors) ====
    // errors
    var y = {
        "stringLiteral",
                       ~
!!! error TS1005: ':' expected.
        42,
          ~
!!! error TS1005: ':' expected.
        get e,
             ~
!!! error TS1005: '(' expected.
        set f,
             ~
!!! error TS1005: '(' expected.
        this,
        ~~~~
!!! error TS2304: Cannot find name 'this'.
        super,
        ~~~~~
!!! error TS2304: Cannot find name 'super'.
        var,
        ~~~
!!! error TS2304: Cannot find name 'var'.
        class,
        ~~~~~
!!! error TS2304: Cannot find name 'class'.
        typeof
        ~~~~~~
!!! error TS2304: Cannot find name 'typeof'.
    };
    
    var x = {
        a.b,
        ~
!!! error TS2300: Duplicate identifier 'a'.
         ~
!!! error TS1005: ':' expected.
        a["ss"],
        ~
!!! error TS2300: Duplicate identifier 'a'.
         ~
!!! error TS1005: ':' expected.
        a[1],
        ~
!!! error TS2300: Duplicate identifier 'a'.
         ~
!!! error TS1005: ':' expected.
    };
    
    var v = { class };  // error
              ~~~~~
!!! error TS2304: Cannot find name 'class'.